# robot_playground

./: CMakeLists.txt  README.md  installdep  package.xml
launch/: amcl.launch  bringup_multi_sim.launch  bringup_sim.launch  multi_navigate.launch  multi_slam.launch  nav.rviz  navigate.launch  slam.launch  spawn_robot.launch  spawn_robot_navigate.launch
launch/move_base/: move_base_4wd.launch  move_base_ackermann.launch  move_base_mecanum.launch
launch/multi/navigation/: amcl.launch  move_base.launch
maps/: map.pgm  map.yaml
param/: base_local_planner_holonomic_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
param/navigation/: costmap_common_params.yaml
worlds/: people.world
