<?xml version="1.0.0"?>
    <package>
    <name>robot_playground</name>
    <version>1.0.0</version>
    <description>Jackal Simulation</description>
    <maintainer email="jimenojmm@gmail.com">t</maintainer>

    <license>BSD</license>

    <url type="website">http://www.linorobot.org</url>

    <author email="jimenojmm@gmail.com">Juan Miguel Jimeno</author>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>gmapping</run_depend>
    <run_depend>map_server</run_depend>  
    <run_depend>move_base</run_depend>
    <run_depend>amcl</run_depend>
    <run_depend>jackal_gazebo</run_depend>

    <export>
    </export>
</package>
